[gd_scene load_steps=10 format=3 uid="uid://cpxc3nt4kvluu"]

[ext_resource type="Script" path="res://Main.gd" id="1_6fvxn"]
[ext_resource type="PackedScene" uid="uid://c368n03udbkes" path="res://Background.tscn" id="1_mxtpn"]
[ext_resource type="PackedScene" uid="uid://bv5lmmect3s21" path="res://Player.tscn" id="2_ftsfk"]
[ext_resource type="PackedScene" uid="uid://cwukf3e24kf28" path="res://mob/Monster.tscn" id="3_5qj14"]
[ext_resource type="PackedScene" uid="uid://b3qnvcdpdqthn" path="res://mob/MeleeMinion.tscn" id="4_151dn"]
[ext_resource type="PackedScene" uid="uid://bkwxsl8kpvwdx" path="res://mob/CasterMinion.tscn" id="4_fwvpg"]
[ext_resource type="PackedScene" uid="uid://drs1t2lex0vhd" path="res://HUD.tscn" id="6_hoq2j"]
[ext_resource type="AudioStream" uid="uid://btyyu3ndh2y1n" path="res://assets/game_over.mp3" id="7_0iv35"]
[ext_resource type="AudioStream" uid="uid://lny4v1vjvocm" path="res://assets/bg.mp3" id="8_a18l2"]

[node name="Main" type="Node"]
script = ExtResource("1_6fvxn")
Monster = ExtResource("3_5qj14")
CasterMinion = ExtResource("4_fwvpg")
MeleeMinion = ExtResource("4_151dn")

[node name="Background" parent="." instance=ExtResource("1_mxtpn")]

[node name="Player" parent="." instance=ExtResource("2_ftsfk")]
position = Vector2(590, 400)

[node name="HUD" parent="." instance=ExtResource("6_hoq2j")]

[node name="BgMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_a18l2")

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_0iv35")

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="new_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
